Swagger Fixes! Movie swagger doc - DONE
