# docs/swagger.json
@@ -24,10 +24,21 @@
                 "tags": [
                     "movies"
                 ],
-                "summary": "Updates movie from request body by Name",
+                "summary": "Gets movie from request body by Name",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Get movie by name",
+                        "name": "name",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Movie"
+                        }
                     }
                 }
             }
@@ -49,14 +60,28 @@
                     "movies"
                 ],
                 "summary": "Creates movie from request body",
+                "parameters": [
+                    {
+                        "description": "Create Movie",
+                        "name": "movie",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Movie"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Movie"
+                        }
                     }
                 }
             }
         },
-        "/movie/delete/": {
+        "/movie/delete/{id}": {
             "delete": {
                 "security": [
                     {
@@ -73,6 +98,15 @@
                     "movies"
                 ],
                 "summary": "Updates movie from request body by url path id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Delete Movie",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -80,7 +114,7 @@
                 }
             }
         },
-        "/movie/update/": {
+        "/movie/update/{id}": {
             "patch": {
                 "security": [
                     {
@@ -96,9 +130,21 @@
                 "tags": [
                     "movies"
                 ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Update Movie",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Movie"
+                        }
                     }
                 }
             }
@@ -272,11 +318,31 @@
             }
         }
     },
+    "definitions": {
+        "models.Movie": {
+            "type": "object",
+            "properties": {
+                "ID": {
+                    "type": "integer"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "rating": {
+                    "type": "integer"
+                }
+            }
+        }
+    },
     "securityDefinitions": {
         "ApiKeyAuth": {
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
+            "type": "basic"
         }
     }
 }
