# handlers/movie.go
@@ -12,13 +12,14 @@ import (
 
 // CreateMovie godoc
 //
-// @Security ApiKeyAuth
+//	@Security	ApiKeyAuth
 //
 //	@Summary	Creates movie from request body
 //	@Tags		movies
 //	@Accept		json
 //	@Produce	json
-//	@Success	200
+//	@Param		movie	body		models.Movie	true	"Create Movie"
+//	@Success	200		{object}	models.Movie
 //	@Router		/movie/create [post]
 func CreateMovie(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodPost {
@@ -56,12 +57,14 @@ func CreateMovie(w http.ResponseWriter, r *http.Request) {
 }
 
 // UpdateMovie @Summary	Updates movie from request body by url path id
-// @Security ApiKeyAuth
-// @Tags		movies
-// @Accept		json
-// @Produce	json
-// @Success	200
-// @Router		/movie/update/ [patch]
+//
+//	@Security	ApiKeyAuth
+//	@Tags		movies
+//	@Accept		json
+//	@Produce	json
+//	@Param		id	path		int	true	"Update Movie"
+//	@Success	200	{object}	models.Movie
+//	@Router		/movie/update/{id} [patch]
 func UpdateMovie(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodPatch {
 		newErrorResponse(w, http.StatusMethodNotAllowed, "Method not Allowed. Only PATCH requests.")
@@ -75,7 +78,7 @@ func UpdateMovie(w http.ResponseWriter, r *http.Request) {
 	}
 
 	var movie models.Movie
-	movieID := r.URL.Query()["id"]
+	movieID := r.URL.Query().Get("id")
 
 	if err = json.Unmarshal(body, &movie); err != nil {
 		newErrorResponse(w, http.StatusInternalServerError, err.Error())
@@ -98,13 +101,14 @@ func UpdateMovie(w http.ResponseWriter, r *http.Request) {
 
 // DeleteMovie godoc
 //
-// @Security ApiKeyAuth
-// @Summary	Updates movie from request body by url path id
-// @Tags		movies
-// @Accept		json
-// @Produce	json
-// @Success	200
-// @Router		/movie/delete/ [delete]
+//	@Security	ApiKeyAuth
+//	@Summary	Updates movie from request body by url path id
+//	@Tags		movies
+//	@Accept		json
+//	@Produce	json
+//	@Param		id	path	int	true	"Delete Movie"
+//	@Success	200
+//	@Router		/movie/delete/{id} [delete]
 func DeleteMovie(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodDelete {
 		newErrorResponse(w, http.StatusMethodNotAllowed, "Method not allowed. Only DELETE requests.")
@@ -112,29 +116,29 @@ func DeleteMovie(w http.ResponseWriter, r *http.Request) {
 	}
 
 	var movie models.Movie
-	movieID := r.URL.Query()["id"]
-
-	// TODO check if movie user does not exists
+	movieID := r.URL.Query().Get("id")
 
 	s := postgres.DB.DB.Delete(&movie, movieID)
 	if s.Error != nil {
 		newErrorResponse(w, http.StatusInternalServerError, s.Error.Error())
 		return
 	}
+
 	newJsonResponse(w, http.StatusOK, map[string]interface{}{
-		"message": "user deleted - ok",
+		"message": "Movie deleted.",
 	})
 }
 
 // GetMovieByName godoc
 //
-// @Security ApiKeyAuth
-// @Summary	Updates movie from request body by Name
-// @Tags		movies
-// @Accept		json
-// @Produce	json
-// @Success	200
-// @Router		/movie [get]
+//	@Security	ApiKeyAuth
+//	@Summary	Gets movie from request body by Name
+//	@Tags		movies
+//	@Accept		json
+//	@Produce	json
+//	@Param		name	query		string	false	"Get movie by name"
+//	@Success	200		{object}	models.Movie
+//	@Router		/movie [get]
 func GetMovieByName(w http.ResponseWriter, r *http.Request) {
 
 	// TODO Implement sorting by: (ORDER BY): name,rating,date (default:rating)
@@ -144,9 +148,7 @@ func GetMovieByName(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	movieReq := r.URL.Query()["name"]
-	ssd := r.URL.Query()["ssd"]
-	log.Println("ssd--->", ssd)
+	movieReq := r.URL.Query().Get("name")
 
 	var movie []models.Movie
 
@@ -157,7 +159,7 @@ func GetMovieByName(w http.ResponseWriter, r *http.Request) {
 	}
 
 	for i := 0; i < len(movie); i++ {
-		if strings.Contains(movie[i].Name, movieReq[0]) {
+		if strings.Contains(movie[i].Name, movieReq) {
 			log.Println("MATCH:", movie[i].Name)
 		}
 	}
